@@ -1,7 +1,7 @@
 #  File src/library/base/R/dput.R
 #  Part of the R package, http://www.R-project.org
 #
-#  Copyright (C) 1995-2012 The R Core Team
+#  Copyright (C) 1995-2014 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -42,5 +42,5 @@ dput <-
     else .Internal(dput(x, file, opts))
 }
 
-dget <- function(file)
-    eval(parse(file = file))
+dget <- function(file, keep.source = FALSE)
+    eval(parse(file = file, keep.source = FALSE))
